--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
 
     font-family: 'Arial';
     overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 .content{
@@ -50,14 +51,11 @@ img{
     width: 640px;
     height: 360px;
     border: 1px solid black;
+    margin-top: 10px;
 }
 
 /*small elements*/
 p{
-    margin: 0px;
-}
-
-h2{
     margin: 0px;
 }
 
@@ -72,6 +70,10 @@ a:hover{
 
 h1 {
     font-size: 40px;
+}
+
+h2{ 
+    margin: 0px;
 }
 
 hr{
@@ -96,6 +98,22 @@ hr{
     border-bottom: 2px solid black;
 }
 .header h2{
-    margin-left: 40px;
-    margin-right: 40px;
+    margin: 0px;
+    width: 200px;
+}
+
+/*body2*/
+.body2{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+.body2 .nav{
+    position: fixed;
+    width: 100px;
+    margin-left: 50px;
+}
+.body2 .fakenav{
+    width: 100px;
+    margin-right: 50px;
 }
