--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 /*big sections*/
+html {
+    scroll-behavior: smooth;
+}
+
 body{
     display: flex;
     flex-direction: column;
@@ -57,6 +61,7 @@ img{
 /*small elements*/
 p{
     margin: 0px;
+    max-width: 600px;
 }
 
 a{
@@ -76,11 +81,15 @@ h2{
     margin: 0px;
 }
 
+h3{
+    margin: 0px;
+}
+
 hr{
     width: 0px;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    color: rgb(206, 206, 206);
+    margin-top: 40px;
+    margin-bottom: 40px;
+    color: rgba(0, 0, 0, 0)
 }
 
 /*header*/
@@ -108,12 +117,39 @@ hr{
     flex-direction: row;
     width: 100%;
 }
+
 .body2 .nav{
     position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     width: 100px;
     margin-left: 50px;
 }
-.body2 .fakenav{
+.body2 .nav a{
+    text-align: left;
     width: 100px;
-    margin-right: 50px;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+.body2 .nav .nested{
+    padding-left: 10px;
+}
+
+.body2 h2{
+    margin-bottom: 20px;
+}
+
+.body2 .info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.body2 .info .links{
+    display: flex;
+    flex-direction: row;
+
+    width: 200px;
+    margin-bottom: 20px;
 }
