--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+/*variables*/
+:root{
+    --pageBackgroundColor: white;
+
+    --headerColor: rgb(46, 46, 46);
+    --headerTextColor: rgb(255, 255, 255);
+
+    --buttonLinkColor: rgb(63, 63, 63);
+    --buttonLinkTextColor: white;
+}
+
 /*big sections*/
 html {
     scroll-behavior: smooth;
@@ -23,7 +34,7 @@ body{
 
     min-height: 100vh;
     width: 100%;
-    background-color: rgb(255, 255, 255);
+    background-color: var(--pageBackgroundColor);
 }
 
 .body{
@@ -73,7 +84,7 @@ a:hover{
     color: rgb(78, 78, 78);
 }
 
-h1 {
+h1{
     font-size: 40px;
 }
 
@@ -103,53 +114,77 @@ hr{
     height: 100px;
     margin-bottom: 40px;
 
-    background-color: rgb(58, 176, 255);
+    background-color: var(--headerColor);
     border-bottom: 2px solid black;
 }
 .header h2{
     margin: 0px;
     width: 200px;
+    color: var(--headerTextColor);
+}
+.header h1{
+    color: var(--headerTextColor);
 }
 
 /*body2*/
 .body2{
     display: flex;
-    flex-direction: row;
-    width: 100%;
-}
-
-.body2 .nav{
-    position: fixed;
-    display: flex;
     flex-direction: column;
     align-items: center;
-
-    width: 100px;
-    margin-left: 50px;
-}
-.body2 .nav a{
-    text-align: left;
-    width: 100px;
-    margin-bottom: 10px;
-    font-weight: bold;
-}
-.body2 .nav .nested{
-    padding-left: 10px;
 }
 
 .body2 h2{
     margin-bottom: 20px;
 }
 
-.body2 .info{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.body2 .info .links{
+.links{
     display: flex;
     flex-direction: row;
 
-    width: 200px;
-    margin-bottom: 20px;
+    width: 300px;
+}
+
+.linkBox{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+   
+    width: 100px;
+    height: 40px;
+    border: solid black 1px;
+    border-radius: 10px;
+
+    background-color: var(--buttonLinkColor);
+    color: var(--buttonLinkTextColor);
+}
+
+/*features*/
+.featureSection{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.featureShower{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    overflow-x: scroll;
+    overflow-y: hidden;
+
+    width: 660px;
+    height: 450px;
+
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.feature{
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.feature p{
+    height: 40px;
 }
