--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
 
     --buttonLinkColor: rgb(63, 63, 63);
     --buttonLinkTextColor: white;
+
+    --darkHoverColor: rgb(78, 78, 78);
+    --lightHoverColor: rgb(182, 182, 182);
 }
 
 /*big sections*/
@@ -81,7 +84,7 @@ a{
     margin: 0px;
 }
 a:hover{
-    color: rgb(78, 78, 78);
+    color: var(--darkHoverColor);
 }
 
 h1{
@@ -114,16 +117,18 @@ hr{
     height: 100px;
     margin-bottom: 40px;
 
-    background-color: var(--headerColor);
     border-bottom: 2px solid black;
+    background-color: var(--headerColor);
 }
 .header h2{
     margin: 0px;
     width: 200px;
+}
+.header a{
     color: var(--headerTextColor);
 }
-.header h1{
-    color: var(--headerTextColor);
+.header a:hover{
+    color: var(--lightHoverColor);
 }
 
 /*body2*/
@@ -131,6 +136,7 @@ hr{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .body2 h2{
@@ -159,6 +165,9 @@ hr{
     background-color: var(--buttonLinkColor);
     color: var(--buttonLinkTextColor);
 }
+.linkBox:hover{
+    color: var(--lightHoverColor);
+}
 
 /*features*/
 .featureSection{
@@ -182,9 +191,18 @@ hr{
 }
 
 .feature{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     margin-left: 10px;
     margin-right: 10px;
 }
 .feature p{
     height: 40px;
+}
+
+.arrow{
+    width: 50px;
+    height: 50px;
 }
