--- a/style.css
+++ b/style.css
@@ -120,6 +120,9 @@ hr{
     border-bottom: 2px solid black;
     background-color: var(--headerColor);
 }
+.title{
+    color: var(--headerTextColor);
+}
 .header h2{
     margin: 0px;
     width: 200px;
