--- a/style.css
+++ b/style.css
@@ -209,6 +209,16 @@ hr{
 }
 
 .arrow{
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 70px;
+    font-size: 45px;
+
+    color: black;
+    background-color: rgba(0, 0, 0, 0);
+    border: 2px solid black;
+    border-radius: 25%;
+}
+.arrow:hover{
+    border-color: var(--darkHoverColor);
+    color: var(--darkHoverColor);
 }
